Fix collapse

--- a/htdocs/content/themes/groupe-ct/assets/sass/elements/blocs/_bloc10.scss
+++ b/htdocs/content/themes/groupe-ct/assets/sass/elements/blocs/_bloc10.scss
@@ -54,8 +54,8 @@
     top:-10px;
     z-index: 10;
     background-color: white;
-    padding:40px 40px 10px 40px;
-    max-width:380px;
+    padding: 40px 40px 15px 40px;
+    max-width: 290px;
 
     -webkit-box-shadow: 0px 0px 41px 1px rgba(0,0,0,0.2);
     -moz-box-shadow: 0px 0px 41px 1px rgba(0,0,0,0.2);
